--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ django-extensions==3.2.3
 pygraphviz==1.12
 django-debug-toolbar==4.2.0
 django-tinymce>=3.0.0
-Pillow==10.2.0   
+Pillow==10.2.0
+psycopg2-binary>=2.8.6  
