--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ pygraphviz==1.12
 django-debug-toolbar==4.2.0
 django-tinymce>=3.0.0
 Pillow==10.2.0
-psycopg2-binary>=2.8.6  
+psycopg2-binary>=2.8.6
+python-dotenv == 1.0.1
+whitenoise == 6.6.0
